# godavari

./: .gitignore  README.md  build_app.sh  launcher.py  leads.spec  requirements.txt  run.py
app/: charts.py  ci_consolidated.py  ci_data_fill.py  ci_data_template.py  ci_exports.py  ci_routes.py  commission_invoices.py  database.py  deal_files.py  delivery_notes.py  dn_exports.py  document_assets.py  exports.py  generate.py  jinja_compat.py  main.py  pdf_render.py  po_exports.py  product_labels.py  products.py  purchase_orders.py  sales_invoices.py  seed.py  si_exports.py  xl_style.py
app/assets/: GBInc_Commercial_Shipping_Data_Request.xlsx  commission_invoice_template.xlsx  gbbv_commission_invoice_template.xlsx  tracking_template.xlsx
data/: product_catalogue.json  seed.json
data/sample_reports/: FINANCIAL STATEMENTS_06-30-22 EXPENSES_2022-07-11.xlsx  (+1 more)
finance/: finance_launcher.py
scripts/: kill_godavari_leads.sh
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
static/: activity-edit.js  ci_template_us.css  ci_wysiwyg.css  ci_wysiwyg.js  deal_commercial.js  deals-rows.js  deals.js  dn_wysiwyg.css  dn_wysiwyg.js  generate.css  log.js  po_wysiwyg.css  po_wysiwyg.js  qty-unit.js  si_wysiwyg.css  si_wysiwyg.js  style.css
templates/: _activity_link_mode.html  _activity_row.html  _deal_commercial_extra.html  _deal_shipping_fields.html  _quantity_fields.html  add.html  base.html  customer.html  dashboard.html  deal.html  deals.html  leads.html  product_edit.html  products.html  shipping.html  summary.html
(+53 files in other folders)
