[package]
name = "leads"
version = "1.0.0"
description = "Godavari Leads Dashboard"
authors = ["Godavari Biorefineries BV"]
edition = "2021"

[lib]
name = "leads_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "leads"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
